<resources>
  <string name="app_name">Pet Search Assignment</string>
  <string name="budget">Budget</string>
  <string name="revenue">Revenue</string>
  <string name="title">Popular Movies</string>
  <string name="search">Search</string>
  <string name="sort">Sort</string>
  <string name="duration">%d Minutes</string>

  <!--Place Holders-->
  <string name="place_holder_title">Lorem ipsum dolor</string>
  <string name="place_holder_details">Lorem ipsum dolor sit amet, consectetur adipiscing elitlorem ipsum dolor sit amet, consectetur adipiscing elit</string>
  <string name="place_holder_rating">9.3</string>
  <string name="place_holder_release_date">21st April 2018</string>
  <string name="place_holder_language">EN</string>
  <string name="place_holder_genres">Horror, Romance, Comedy, Horror, Romance, Comedy</string>
  <string name="place_holder_budget">$15 Million</string>
  <string name="place_holder_revenue">$25 Million</string>
  <string name="place_holder_runtime">122 Minutes</string>

</resources>
