<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".movie.details.MovieDetailsActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/spacing_medium">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/backdrop_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        tools:text="@string/place_holder_details"
        android:textSize="@dimen/text_size_medium"
        android:padding="@dimen/spacing_micro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/overview_textView"
        app:layout_constraintTop_toBottomOf="@id/backdrop_imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/duration_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_xmedium"
        tools:text="@string/place_holder_runtime"
        android:padding="@dimen/spacing_micro"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_textView"/>

    <TextView
        tools:text="@string/place_holder_release_date"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:textSize="@dimen/text_size_xmedium"
        android:padding="@dimen/spacing_micro"
        android:layout_height="wrap_content"
        android:id="@+id/releaseDate_textView"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@+id/overview_textView"
        app:layout_constraintStart_toEndOf="@+id/duration_textView"/>

    <TextView
        tools:text="@string/place_holder_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_textView"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:paddingStart="@dimen/spacing_small"
        android:paddingEnd="@dimen/spacing_small"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:textSize="@dimen/text_size_xmedium"
        android:padding="@dimen/spacing_micro"
        app:layout_constraintStart_toEndOf="@+id/releaseDate_textView"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@+id/overview_textView"/>

    <TextView
        tools:text="@string/place_holder_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/genre_textView"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_medium"
        android:padding="@dimen/spacing_micro"
        android:textSize="@dimen/text_size_xmedium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration_textView"
        app:layout_constraintEnd_toStartOf="@+id/language_textView"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        tools:text="@string/place_holder_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language_textView"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:paddingStart="@dimen/spacing_small"
        android:paddingEnd="@dimen/spacing_small"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_xmedium"
        android:padding="@dimen/spacing_micro"
        android:layout_marginEnd="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="@dimen/spacing_medium"
        app:layout_constraintTop_toTopOf="@+id/genre_textView"
        app:layout_constraintBottom_toBottomOf="@+id/genre_textView"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/genre_textView"
        android:layout_marginTop="@dimen/spacing_small"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        android:id="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/language_textView"
        app:layout_constraintStart_toStartOf="@+id/genre_textView">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:padding="@dimen/spacing_medium"
          android:layout_height="wrap_content"
          tools:layout_editor_absoluteY="4dp"
          tools:layout_editor_absoluteX="3dp">

        <TextView
            android:text="@string/budget"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/text_size_xmedium"
            android:id="@+id/textView_budget"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            tools:text="@string/place_holder_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/budget_textView"
            android:textSize="@dimen/text_size_xmedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_revenue"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginLeft="@dimen/spacing_medium"/>

        <TextView
            android:text="@string/revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_revenue"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:textSize="@dimen/text_size_xmedium"
            app:layout_constraintTop_toBottomOf="@+id/textView_budget"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            tools:text="@string/place_holder_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/revenue_textView"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_medium"
            android:textSize="@dimen/text_size_xmedium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            app:layout_constraintTop_toBottomOf="@+id/budget_textView"
            app:layout_constraintStart_toEndOf="@+id/textView_revenue"/>


      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
