<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/spacing_medium"
    android:layout_height="wrap_content">

  <ImageView
      android:layout_width="75dp"
      android:layout_height="wrap_content"
      app:srcCompat="@mipmap/ic_launcher"
      android:id="@+id/poster_imageView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toBottomOf="parent"/>

  <TextView
      tools:text="@string/place_holder_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/title_textView"
      android:gravity="start"
      android:layout_marginLeft="@dimen/spacing_medium"
      android:textSize="@dimen/text_size_large"
      android:layout_marginStart="@dimen/spacing_medium"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="@dimen/spacing_small"
      android:layout_marginRight="@dimen/spacing_small"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/poster_imageView"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      tools:text="@string/place_holder_details"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textSize="@dimen/text_size_medium"
      android:maxLines="3"
      android:id="@+id/overview_textView"
      app:layout_constraintTop_toBottomOf="@+id/title_textView"
      app:layout_constraintStart_toEndOf="@+id/poster_imageView"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginLeft="@dimen/spacing_medium"
      android:layout_marginStart="@dimen/spacing_medium"
      android:layout_marginTop="@dimen/spacing_small"
      android:layout_marginEnd="@dimen/spacing_small"
      android:layout_marginRight="@dimen/spacing_small"/>

  <TextView
      tools:text="@string/place_holder_rating"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/rating_textView"
      android:background="@color/colorPrimary"
      android:textColor="@android:color/white"
      android:paddingStart="@dimen/spacing_small"
      android:paddingEnd="@dimen/spacing_small"
      android:layout_marginLeft="@dimen/spacing_medium"
      android:layout_marginStart="@dimen/spacing_medium"
      android:layout_marginEnd="@dimen/spacing_small"
      android:layout_marginRight="@dimen/spacing_small"
      android:layout_marginTop="@dimen/spacing_small"
      app:layout_constraintTop_toBottomOf="@+id/overview_textView"
      app:layout_constraintStart_toEndOf="@+id/poster_imageView"/>

  <TextView
      tools:text="@string/place_holder_language"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/language_textView"
      android:background="@color/colorAccent"
      android:textColor="@android:color/white"
      android:paddingStart="@dimen/spacing_small"
      android:paddingEnd="@dimen/spacing_small"
      android:layout_marginLeft="@dimen/spacing_small"
      android:textAllCaps="true"
      android:layout_marginStart="@dimen/spacing_small"
      android:layout_marginEnd="@dimen/spacing_small"
      android:layout_marginRight="@dimen/spacing_small"
      android:layout_marginTop="@dimen/spacing_small"
      app:layout_constraintTop_toTopOf="@+id/releaseDate_textView"
      app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
      tools:text="@string/place_holder_release_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/releaseDate_textView"
      android:layout_marginLeft="@dimen/spacing_small"
      android:layout_marginStart="@dimen/spacing_small"
      android:layout_marginEnd="@dimen/spacing_small"
      android:layout_marginRight="@dimen/spacing_small"
      android:layout_marginTop="@dimen/spacing_small"
      app:layout_constraintStart_toEndOf="@+id/rating_textView"
      app:layout_constraintEnd_toStartOf="@+id/language_textView"
      app:layout_constraintTop_toBottomOf="@+id/overview_textView"/>

</androidx.constraintlayout.widget.ConstraintLayout>